--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <nav class="navbar"> <!-- navigation bar -->
-             <a ui-sref="album" class="logo"><!-- I changed href="album.html" to ui-sref="album" -->
+             <a ui-sref="landing" class="logo"><!-- I changed href="album.html" to ui-sref="album" -->
                 <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
              </a>
              <div class="links-container">
@@ -29,7 +29,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
     <script src="/scripts/app.js"></script>
-    <script src="/scripts/fixtures.js"></script>
+    <script src="/scripts/services/Fixtures.js"></script>
     <script src="/scripts/controllers/LandingCtrl.js"></script>
     <script src="/scripts/controllers/CollectionCtrl.js"></script>
     <script src="/scripts/controllers/AlbumCtrl.js"></script>
